# kronrod

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  meson.build  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  codeql.yml  release-pypi.yml  test.yml
docs/: api.md  index.md  installation.md  quickstart.md  references.md  theory.md
kronrod/: __init__.py  _kronrod.pyf  _kronrod_helpers.c  meson.build
src/: kronrod.c  kronrod.h  meson.build
tests/: meson.build  test_kronrod.c  test_kronrod.py
